# chip8-emu

./: .gitignore  README.md  vercel.json
chip_core/: Cargo.toml
chip_core/src/: lib.rs
desktop/: Cargo.toml
desktop/src/: main.rs
wasm_frontend/: Cargo.toml
wasm_frontend/src/: lib.rs
web/: .gitattributes  .gitignore  .vercelignore  README.md  index.html  netlify.toml  package-lock.json  package.json  setup-roms.sh  vercel.json  vite.config.js
web/public/roms/: README.md  catalog.json
web/scripts/: build-wasm.sh  prepare-deploy.sh
web/src/: App.vue
web/src/components/: Controls.vue  Display.vue  Keypad.vue  RomLibrary.vue  RomSelector.vue
web/src/composables/: useEmulator.js
web/src/wasm/: package.json  wasm_frontend.d.ts  wasm_frontend.js  wasm_frontend_bg.wasm  wasm_frontend_bg.wasm.d.ts
